# hyro_signal_generator

./: CMakeLists.txt  README.md  package.json
include/hyro/: DigitalConverterComponent.h  SignalGenerator.h  SignalGeneratorComponent.h  Thresholding.h
include/hyro/msgs/: Signal.h  Signal.proto.h
msgs/hyro/msgs/: Signal.proto
src/components/: DigitalConverterComponent.cpp  SignalGeneratorComponent.cpp
src/examples/: signal_generator.cpp
src/internal/: SignalGenerator.cpp  Thresholding.cpp
tests/: test_signal_generator.cpp
